# solana_2_track_Pulse

./: .gitignore  Anchor.toml  Cargo.toml  README.md  deploy.sh
app/: .gitignore  package-lock.json  package.json  tailwind.config.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: PriceChart.tsx  TelegramProvider.tsx  WalletProvider.tsx
app/src/idl/: ai_asset_manager.json
app/src/lib/: ai-engine.ts  ai-model.ts  backtest.ts  i18n.ts  jupiter-swap.ts  market-data.ts  ml-predictor.ts  pnl-tracker.ts  solana-integration.ts  technical-analysis.ts  telegram-bot.ts  websocket-feed.ts
bot/: .env.example  .gitignore  package-lock.json  package.json
bot/src/: config.ts  index.ts  market-data.ts  technical-analysis.ts  telegram-commands.ts  telegram.ts
programs/ai_asset_manager/: Cargo.toml
programs/ai_asset_manager/src/: lib.rs
