[package]
name = "ai-asset-manager"
version = "0.1.0"
description = "AI Asset Manager - Autonomous agent on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ai_asset_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
